--- a/auditoriasdecalidad.html
+++ b/auditoriasdecalidad.html
@@ -90,7 +90,7 @@
                                     <div class="service service4">
                                         <div data-ix="show-up-element-on-scroll-3" class="portfolio-sample">
                                             <div class="pan-de-texto1">
-                                                <h4>DISPOSICION 3266/13</h4>
+                                                <h4>DISPOSICIÓN 3266/13</h4>
                                                 <div class="texto-padding9">
                                                     <p><a>
                                                         <i class="team_imagen">
@@ -105,7 +105,7 @@
                                                          <a href="mailto:danielgomez@gdasrl.com.ar" class="footer-link">
                                                          <i class="fal fa-envelope" aria-hidden="true"></i>Envia un mail
                                                         </a>
-                                                        <a href="contacto.html" class="buttonmasinfo">Más info</a>
+                                                        
                                                     </p>
                                                 </div>
                                             </div>
@@ -119,7 +119,7 @@
                                     <div class="service service4">
                                         <div data-ix="show-up-element-on-scroll-3" class="portfolio-sample">
                                             <div class="pan-de-texto1">
-                                                <h4>DISPOSICION 6052/13</h4>
+                                                <h4>DISPOSICIÓN 6052/13</h4>
                                                 <div class="texto-padding9">
                                                     <p><a>
                                                         <i class="team_imagen">
@@ -134,7 +134,7 @@
                                                          <a href="mailto:danielgomez@gdasrl.com.ar" class="footer-link">
                                                          <i class="fal fa-envelope" aria-hidden="true"></i>Envia un mail
                                                         </a>
-                                                        <a href="contacto.html" class="buttonmasinfo">Más info</a>
+                                                        
                                                     </p>
                                                 </div>
                                             </div>
