--- a/habilitacion_nacional.html
+++ b/habilitacion_nacional.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="header-nacional">
-        <p>Habilitaciones nacionales</p>
+        <p>Habilitaciones Nacionales</p>
         <div>
             <div class="left-dot3"></div>
             <div class="right-dot3"></div>
@@ -83,7 +83,7 @@
                 <h3 style="padding-bottom: 70px;">Consultá por el trámite a realizar </h3>
                 <div class="content-wrapper w-container">
                     <div class="flex-wrapper space-between">
-                        <h4 style="margin-left:70px;">Habilitaciones en la nación</h4>
+                        <h4 style="margin-left:70px;">Habilitaciones en la Nación</h4>
 
                         <div class="row" style="margin: 50px;">
                             <div class="col-xs-12 col-md-3">
@@ -177,7 +177,7 @@
                                     <div class="service service4">
                                         <div data-ix="show-up-element-on-scroll-3" class="portfolio-sample">
                                             <div class="pan-de-texto1">
-                                                <h4>Habilitación de empresas distribuidoras de productos médicos y/o productos para diagnostico de uso in vitro (transito interjurisdiccional)</h4>
+                                                <h4>Habilitación de empresas distribuidoras de productos médicos y/o productos para diagnóstico de uso in vitro (tránsito interjurisdiccional)</h4>
                                                 <div class="texto-padding9">
                                                     <p><a>
                                                         <i class="team_imagen">
@@ -281,7 +281,7 @@
                                                          <a href="mailto:luispinto@gdasrl.com.ar" class="footer-link">
                                                          <i class="fal fa-envelope" aria-hidden="true"></i>Envia un mail
                                                         </a>
-                                                        <a href="contacto.html" class="buttonmasinfo">Más info</a>
+                                                        
                                                     </p>
                                                 </div>
                                             </div>
