--- a/validaciondeenvases.html
+++ b/validaciondeenvases.html
@@ -92,8 +92,8 @@
                                         <div class="service service4">
                                             <div data-ix="show-up-element-on-scroll-3" class="portfolio-sample">
                                                 <div class="pan-de-texto1">
-                                                    <h4 style="padding-top: 23px;">Atención a consultas</h4>
-                                                    <div class="texto-padding9" style="padding-top: 40px;">
+                                                    <h4>Atención a consultas</h4>
+                                                    <div class="texto-padding9">
                                                         <p ><a>
                                                             <i class="team_imagen">
                                                                 <img src="./images/user.png" alt="">
@@ -107,7 +107,7 @@
                                                              <a href="mailto:luispinto@gdasrl.com.ar" class="footer-link">
                                                              <i class="fal fa-envelope" aria-hidden="true"></i>Envia un mail
                                                             </a>
-                                                            <a href="contacto.html" class="buttonmasinfo">Más info</a>
+                                                            
                                                         </p>
                                                     </div>
                                                 </div>
