--- a/registrodeproducto.html
+++ b/registrodeproducto.html
@@ -92,7 +92,7 @@
                                         <div data-ix="show-up-element-on-scroll-3" class="portfolio-sample">
                                             <div class="pan-de-texto1">
                                                 <h4>Familia de productos médicos clase I, II, III y IV</h4>
-                                                <div class="texto-padding9" style="padding-top: 21px;">
+                                                <div class="texto-padding9">
                                                     <p><a>
                                                         <i class="team_imagen">
                                                             <img src="./images/user.png" alt="">
@@ -106,7 +106,7 @@
                                                          <a href="mailto:luispinto@gdasrl.com.ar" class="footer-link">
                                                          <i class="fal fa-envelope" aria-hidden="true"></i>Envia un mail
                                                         </a>
-                                                        <a href="contacto.html" class="buttonmasinfo">Más info</a>
+                                                        
                                                     </p>
                                                 </div>
                                             </div>
