--- a/habilitacion_nacional.html
+++ b/habilitacion_nacional.html
@@ -83,7 +83,7 @@
                 <h3 style="padding-bottom: 70px;">Consultá por el trámite a realizar </h3>
                 <div class="content-wrapper w-container">
                     <div class="flex-wrapper space-between">
-                        <h4 style="margin-left:70px;">Habilitaciones en la Nación</h4>
+                        <h4 class="subheader">Habilitaciones en la Nación</h4>
 
                         <div class="row" style="margin: 50px;">
                             <div class="col-xs-12 col-md-3">
