--- a/habilitacion_provincial.html
+++ b/habilitacion_provincial.html
@@ -83,7 +83,7 @@
                 <h3 style="padding-bottom: 70px;">Consultá por el trámite a realizar </h3>
                 <div class="content-wrapper w-container">
                     <div class="flex-wrapper space-between">
-                        <h4 style="margin-left:70px;">Habilitaciones Provincia de Buenos Aires</h4>
+                        <h4 class="subheader">Habilitaciones Provincia de Buenos Aires</h4>
 
                         <div class="row" style="margin: 50px;">
                             <div class="col-xs-12 col-md-3">
@@ -200,7 +200,7 @@
                             </div>
                         </div>
 
-                        <h4 style="margin-left:70px;">Habilitaciones Ciudad Autónoma de Buenos Aires (Ministerio de salud de la Nación)</h4>
+                        <h4 class="subheader">Habilitaciones Ciudad Autónoma de Buenos Aires (Ministerio de salud de la Nación)</h4>
                             <div class="row" style="margin: 50px;">
                             
                              <div class="col-xs-12 col-md-3">
@@ -261,7 +261,7 @@
                                 </div>
                             </div>
                         </div>
-                        <h4 style="margin-left:70px;">Habilitaciones en las Provincias</h4>
+                        <h4 class="subheader">Habilitaciones en las Provincias</h4>
                             <div class="row" style="margin: 50px;">
                             <div class="col-xs-12 col-md-2">
                                 <div class="espacios-unidades">
