--- a/mapeotermico.html
+++ b/mapeotermico.html
@@ -144,8 +144,8 @@
                         <div>
                             <div class="footer-link-wrapper1 w-clearfix">
                                 
-                                <a href="https://www.google.com.ar/maps/place/Roma+809,+C1408BZG+CABA/@-34.6276932,-58.5232202,17z/data=!4m5!3m4!1s0x95bcc82534d73da7:0xaa7acca869077cfc!8m2!3d-34.6276888!4d-58.5217289"
-                                    class="footer-link"> <i class="fal fa-map-marker-alt"></i>ROMA 809, C.A.B.A.</a>
+                                <a href="https://www.google.com/maps/place/Roma+805,+C1408+BZG,+Buenos+Aires/@-34.6276802,-58.5237135,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcc83ab555d079:0xb1da7b9c41e9dbeb!8m2!3d-34.6276802!4d-58.5215248" target="blank"
+                                    class="footer-link"> <i class="fal fa-map-marker-alt"></i>ROMA 805, C.A.B.A.</a>
                             </div>
                         </div>
                         <div class="footer-link-wrapper1 w-clearfix">
