--- a/contacto.html
+++ b/contacto.html
@@ -116,7 +116,7 @@
                 <div class="col-12 col-md-6">
                     <div class="mapa">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.069133674389!2d-58.52322021070762!3d-34.627693194623006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc82534d73da7%3A0xaa7acca869077cfc!2sRoma%20809%2C%20C1408BZG%20CABA!5e0!3m2!1ses-419!2sar!4v1597144032777!5m2!1ses-419!2sar"
+                            src="https://www.google.com/maps/place/Roma+805,+C1408+BZG,+Buenos+Aires/@-34.6276802,-58.5237135,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcc83ab555d079:0xb1da7b9c41e9dbeb!8m2!3d-34.6276802!4d-58.5215248"
                             width="200" height="250" frameborder="0" style="border:0;" allowfullscreen=""
                             aria-hidden="false" tabindex="0">
                         </iframe>
@@ -145,8 +145,8 @@
                         <h5 class="heading-4">Dónde estamos</h5><br>
                         <div class="footer-link-wrapper1 w-clearfix">
                             <i class="fal fa-map-marker-alt"></i>
-                            <a href="https://www.google.com.ar/maps/place/Roma+809,+C1408BZG+CABA/@-34.6276932,-58.5232202,17z/data=!4m5!3m4!1s0x95bcc82534d73da7:0xaa7acca869077cfc!8m2!3d-34.6276888!4d-58.5217289"
-                                class="footer-link">ROMA 809, C.A.B.A.</a>
+                            <a href="https://www.google.com/maps/place/Roma+805,+C1408+BZG,+Buenos+Aires/@-34.6276802,-58.5237135,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcc83ab555d079:0xb1da7b9c41e9dbeb!8m2!3d-34.6276802!4d-58.5215248" target="blank"
+                                    class="footer-link"> <i class="fal fa-map-marker-alt"></i>ROMA 805, C.A.B.A.</a>
                         </div>
                         <div class="footer-link-wrapper1 w-clearfix">
                             <i class="fal fa-envelope" aria-hidden="true"></i>
